css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*header*/
header{
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    background-color: white;
    height: 60px;
}

.margin-input{
    margin-top: 7px;
}

.margin-bell{
    margin-top: 13px;
}

.background-input{
    background-color: lightgray;
}

.has-search .form-control-feedback {
    position: absolute;
    z-index: 2;
    display: block;
    width: 2.375rem;
    height: 2.375rem;
    line-height: 2.375rem;
    text-align: center;
    pointer-events: none;
    color: #aaa;
}

.has-search .form-control {
    padding-left: 2.375rem;
}

.img-mobile{
    width: 50px;
}
/*fine header*/

/*sidebar*/
.section-sidebar{
    width: 60px;
    height: calc(100vh - 50px);
    position: fixed;
    margin-top: 60px;
}

.background-sidebar{
    background-image: url(../img/sidebar-bg.png);
    background-color: #051E34;
}

.ul-sidebar{
    list-style-type: none;
    color: white;
    padding: 0;
}

.ul-sidebar li:hover{
    background-color: rgba(255, 255, 255, 0.574);
}
/*fine sidebar*/

/*main*/
/*jumbotron*/
.background-jumbo{
    background-color: #1b72e7;
}

.btn-primary{
    border: 1px solid white;
}

/*main centrale*/
main{
    padding-top: 60px;
}

.main-centrale{
    width: calc(100% - 60px);
    height: calc(100vh - 60px);
    margin-left: 60px;
}

/*tabella*/
.class__img img{
    width: 20px;
}

.dashboard .card-header {
    font-weight: 700;
    font-size: 1.5rem;
} 

.card-body .list-group-item .form-check-label {
    font-size: 15px;
    cursor: pointer;
}

.card-header {
    font-size: 20px;
    font-weight: 700;
}

.recap_title {
    font-size: 40px;
    font-weight: 600;
}

.number-student {
    font-size: 35px;
    font-weight: 600;
}

#accordionFlushExample{
    border: 1px solid lightgrey;
    border-top: none;
}

.tr-hover:hover{
    background-color: rgba(0, 0, 0, 0.226);
}
/*offcanvas*/
.offcanvas.offcanvas-end.w-canvas{
    width: 100%;
}
/*fine main*/

/*media query*/
/*tablet*/
@media screen and (min-width: 991px) {
    .section-sidebar{
        width: 170px;
    }

    .main-centrale{
        width: calc(100% - 170px);
        margin-left: 170px;
    }

    .offcanvas.offcanvas-end.w-canvas{
        width: 50%;
    }
}

